# napari-hdf5-hts

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
napari_hdf5_hts/: __init__.py  _dock_widget.py  _reader.py
napari_hdf5_hts/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
